[gd_scene load_steps=2 format=3 uid="uid://c143x75y0fkh2"]

[ext_resource type="Script" path="res://scripts/enemy_hitbox.gd" id="1_3nme0"]

[node name="Enemy Hitbox" type="Area2D"]
collision_layer = 8
collision_mask = 4
script = ExtResource("1_3nme0")
STAGGER_THRESHOLD = 50

[node name="ImpactTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="ImpactTimer" to="." method="_on_impact_timer_timeout"]
